Link on GFDRR logo Also fixes alignment issue on Firefox

--- a/thinkhazard/static/less/index-layout.less
+++ b/thinkhazard/static/less/index-layout.less
@@ -52,6 +52,7 @@ header {
 .logo-gfdrr {
   margin-top: 60px;
   height: 61px;
+  width: 200px;
+  display: inline-block;
   background: url(../images/logo-gfdrr-big.png) no-repeat;
-  background-position-x: center;
 }
